@startuml erd
!theme plain
hide circle
skinparam linetype ortho

' Definirea stilului pentru PK si FK
skinparam class {
    BackgroundColor White
    ArrowColor Black
    BorderColor Black
}

entity "DEPARTAMENTE" as DEPARTAMENTE {
  * id_departament : NUMBER <<PK>>
  --
  * denumire_dept : VARCHAR2(50)
  * cod_dept : VARCHAR2(10) <<UQ>>
    descriere : VARCHAR2(200)
}

entity "FORME_JURIDICE" as FORME_JURIDICE {
  * id_forma : NUMBER <<PK>>
  --
  * cod_forma : VARCHAR2(10) <<UQ>>
  * denumire_completa : VARCHAR2(100)
}

entity "SERVICII" as SERVICII {
  * id_serviciu : NUMBER <<PK>>
  --
  * denumire_serviciu : VARCHAR2(100)
  * tarif_standard : NUMBER
    categorie : VARCHAR2(50)
}

entity "TIPURI_DECLARATII" as TIPURI_DECLARATII {
  * id_tip_declaratie : NUMBER <<PK>>
  --
  * cod_declaratie : VARCHAR2(10) <<UQ>>
  * denumire : VARCHAR2(100)
    frecventa_depunere : VARCHAR2(20)
    termen_limita_zile : NUMBER
}

entity "ANGAJATI" as ANGAJATI {
  * id_angajat : NUMBER <<PK>>
  --
  * id_departament : NUMBER <<FK>>
  * nume : VARCHAR2(50)
  * prenume : VARCHAR2(50)
  * cnp : VARCHAR2(13) <<UQ>>
  * email : VARCHAR2(100) <<UQ>>
    telefon : VARCHAR2(20)
    data_angajarii : DATE
    functie : VARCHAR2(50)
    salariu : NUMBER
}

entity "CLIENTI" as CLIENTI {
  * id_client : NUMBER <<PK>>
  --
  * id_forma : NUMBER <<FK>>
  * nume_companie : VARCHAR2(100)
  * cui : VARCHAR2(20) <<UQ>>
    adresa_sediu : VARCHAR2(200)
    reprezentant_legal : VARCHAR2(100)
    telefon : VARCHAR2(20)
    email_contact : VARCHAR2(50) <<UQ>>
}

entity "DOCUMENTE_LEGALE" as DOCUMENTE_LEGALE {
  * id_document : NUMBER <<PK>>
  --
  * id_client : NUMBER <<FK>>
  * tip_document : VARCHAR2(50)
  * serie_numar : VARCHAR2(50)
    data_emiterii : DATE
    data_expirare : DATE
    status_validare : VARCHAR2(20)
    copie_digitala : VARCHAR2(255)
}

entity "CONTRACTE" as CONTRACTE {
  * id_contract : NUMBER <<PK>>
  --
  * id_client : NUMBER <<FK>>
  * id_angajat : NUMBER <<FK>>
    data_semnare : DATE
    data_expirare : DATE
    valoare_totala : NUMBER
    moneda : VARCHAR2(3)
    status_contract : VARCHAR2(15)
}

entity "DETALII_CONTRACT" as DETALII_CONTRACT {
  * id_contract : NUMBER <<PK, FK>>
  * id_serviciu : NUMBER <<PK, FK>>
  --
  * tarif_negociat : NUMBER
    observatii : VARCHAR2(200)
}

entity "FACTURI" as FACTURI {
  * id_factura : NUMBER <<PK>>
  --
  * id_contract : NUMBER <<FK>>
  * numar_factura : NUMBER
    data_emitere : DATE
    data_scadenta : DATE
  * suma_totala : NUMBER
    cota_tva : NUMBER
    status_plata : VARCHAR2(15)
}

entity "PLATI" as PLATI {
  * id_plata : NUMBER <<PK>>
  --
  * id_factura : NUMBER <<FK>>
  * suma_platita : NUMBER
    data_plata : DATE
    metoda_plata : VARCHAR2(20)
    cont_iban_sursa : VARCHAR2(34)
    referinta_tranzactie : VARCHAR2(100)
}

entity "DECLARATII_FISCALE" as DECLARATII_FISCALE {
  * id_declaratie : NUMBER <<PK>>
  --
  * id_client : NUMBER <<FK>>
  * id_tip_declaratie : NUMBER <<FK>>
  * id_angajat : NUMBER <<FK>>
  * luna_an_raportare : VARCHAR2(20)
    data_depunere : DATE
    suma_datorata : NUMBER
    metoda_depunere : VARCHAR2(20)
    numar_recipisa_anaf : VARCHAR2(50) <<UQ>>
    stare_recipisa : VARCHAR2(20)
}

' Relatiile logice conform stilului image.png
DEPARTAMENTE "1(1)" -- "M(1)" ANGAJATI
FORME_JURIDICE "1(1)" -- "M(1)" CLIENTI
CLIENTI "1(1)" -- "M(0)" DOCUMENTE_LEGALE
CLIENTI "1(1)" -- "M(0)" CONTRACTE
ANGAJATI "1(1)" -- "M(0)" CONTRACTE
CONTRACTE "1(1)" -- "M(1)" DETALII_CONTRACT
SERVICII "1(1)" -- "M(0)" DETALII_CONTRACT
CONTRACTE "1(1)" -- "M(0)" FACTURI
FACTURI "1(1)" -- "M(0)" PLATI
CLIENTI "1(1)" -- "M(0)" DECLARATII_FISCALE
TIPURI_DECLARATII "1(1)" -- "M(0)" DECLARATII_FISCALE
ANGAJATI "1(1)" -- "M(0)" DECLARATII_FISCALE

@enduml
